Edited Add Event FXML linked with main app using button mouse click updated aesthetics for Month and Week View