@@ -67,6 +67,7 @@
                         <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                         <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                        <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                     </options>
 
                     <release>${maven.compiler.release}</release>
